--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,11 +1,9 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  line-height: 1.3;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color-scheme: dark;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,8 +13,30 @@
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  padding: 0;
+
   min-width: 320px;
   min-height: 100vh;
+
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+div {
+  box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #080808;
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #3d3d3d;
+  border-radius: 20px;
+  border: 1px solid #3d3d3d;
 }
